fix(login ui): align button to right

--- a/applications/apps/content/ui/src/modules/login/login.component.scss
+++ b/applications/apps/content/ui/src/modules/login/login.component.scss
@@ -4,4 +4,10 @@ div.login {
     padding: 24px;
     border: 1px solid var(--body-border);
     background-color: var(--body-content);
+
+    div.login-options {
+        width: 100%;
+        display: flex;
+        justify-content: end;
+    }
 }
